jdk8 compiling enabled